# Infinity

./: README.md  address_book.py  adressbook.py  birthday.py  email.py  email_class.py  exceptions.py  main.py  name.py  note.py  phone.py  record.py  requirements.txt  setup.py  suggest.py
Documentation/: технічне-завдання.md
Examples/: example-commands  examples.md  help_EN.md  help_UA.md
Infinity/: main.py  note.py  sanytize.py  sort_folder.py
Infinity/Tests/: test.py
Infinity/notes/: name1.md
packaged-with-poetry/: pyproject.toml
packaged-with-poetry/Infinity/: main.py  sort_folder.py
