[tool.poetry]
name = "Infinity"
version = "1.0.0"
description = "Python command line assistant"
authors = ["II-777"]
license = "MIT"
readme = "README.md"
packages = [{include = "Infinity"}]

[tool.poetry.dependencies]
python = "^3.6"
rich = "13.5.2"
zipp = "3.16.2"
spacy = "3.6.0"
Levenshtein = "0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
includes = ["README.md"]

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
en-core-web-md = ["https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.6.0/en_core_web_md-3.6.0-py3-none-any.whl#sha256=1618fc62e7aedc2b778caa3ea6e9c8280beac3b83fe7b93316cbb9e8f3abe7c5"]

[tool.poetry.scripts]
clean-folder = "Infinity.main:main"
